examples/test/testpolicy4131.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4131
  namespace: namespace25
spec:
  podSelector:
    matchLabels:
      key39: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value0
      podSelector:
        matchLabels:
          key5: value36
          key4: value1
          key34: value38
